--- a/cluster/apps/home/home-assistant/helm-release.yaml
+++ b/cluster/apps/home/home-assistant/helm-release.yaml
@@ -118,7 +118,7 @@ spec:
               - home.sparks.codes
       code:
         enabled: true
-        className: nginx-internal
+        className: traefik
         annotations:
           nginx.ingress.kubernetes.io/auth-type: basic
           nginx.ingress.kubernetes.io/auth-secret: codeserver-auth-secret
