--- a/cluster/apps/tools/bambu-studio/helm-release-storage.yaml
+++ b/cluster/apps/tools/bambu-studio/helm-release-storage.yaml
@@ -42,7 +42,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: "nginx-internal"
+        className: "traefik"
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/appName: "Bambu Storage"
