--- a/cluster/apps/tools/ollama/hr-open-webui.yaml
+++ b/cluster/apps/tools/ollama/hr-open-webui.yaml
@@ -48,7 +48,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: nginx-internal
+        className: traefik
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/icon: cloud-search
