--- a/cluster/core/networking/kustomization.yaml
+++ b/cluster/core/networking/kustomization.yaml
@@ -7,5 +7,4 @@ resources:
   - cloudflare-ingress
   # - external-dns
   - metallb
-  # - nginx-ingress-external
-  - nginx-ingress-internal
+  - traefik
