--- a/cluster/apps/home/emqx/helm-release.yaml
+++ b/cluster/apps/home/emqx/helm-release.yaml
@@ -40,7 +40,7 @@ spec:
     ingress:
       dashboard:
         enabled: true
-        ingressClassName: nginx-internal
+        ingressClassName: traefik
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/appName: "Emqx Dashboard"
