--- a/cluster/apps/home/zwavejs2mqtt/deployment.yaml
+++ b/cluster/apps/home/zwavejs2mqtt/deployment.yaml
@@ -109,7 +109,7 @@ metadata:
   labels:
     name: zwavejs2mqtt
   annotations:
-    kubernetes.io/ingress.class: "nginx-internal"
+    kubernetes.io/ingress.class: "traefik"
     hajimari.io/enable: "true"
     hajimari.io/appName: "ZwaveJS2MQTT"
     hajimari.io/info: "Z-Wave device dashboard"
