--- a/cluster/apps/media/calibre/calibre-web/helm-release.yaml
+++ b/cluster/apps/media/calibre/calibre-web/helm-release.yaml
@@ -34,7 +34,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: "nginx-internal"
+        className: "traefik"
         annotations:
           nginx.ingress.kubernetes.io/proxy-body-size: 1024m
           hajimari.io/enable: "true"
