--- a/cluster/apps/media/docuseal/helm-release.yaml
+++ b/cluster/apps/media/docuseal/helm-release.yaml
@@ -41,7 +41,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: nginx-internal
+        className: traefik
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/appName: "Docuseal"
