--- a/cluster/apps/media/metube/helm-release.yaml
+++ b/cluster/apps/media/metube/helm-release.yaml
@@ -35,7 +35,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: nginx-internal
+        className: traefik
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/appName: "MeTube"
