--- a/cluster/apps/nginx/proxy.router.sparks.codes/helm-release.yaml
+++ b/cluster/apps/nginx/proxy.router.sparks.codes/helm-release.yaml
@@ -41,7 +41,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: nginx-internal
+        className: traefik
         annotations:
           ingress.kubernetes.io/force-ssl-redirect: "true"
           hajimari.io/enable: "true"
