--- a/cluster/apps/tools/hajimari/helm-release.yaml
+++ b/cluster/apps/tools/hajimari/helm-release.yaml
@@ -145,7 +145,7 @@ spec:
       main:
         enabled: true
         annotations:
-          kubernetes.io/ingress.class: "nginx-internal"
+          kubernetes.io/ingress.class: "traefik"
         hosts:
           - host: "dashboard.sparks.codes"
             paths:
