--- a/cluster/apps/tools/homebox/helm-release.yaml
+++ b/cluster/apps/tools/homebox/helm-release.yaml
@@ -43,7 +43,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: nginx-internal
+        className: traefik
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/appName: "Inventory"
