--- a/cluster/apps/tools/idrac6/idrac-omega.sparks.codes/helm-release.yaml
+++ b/cluster/apps/tools/idrac6/idrac-omega.sparks.codes/helm-release.yaml
@@ -38,7 +38,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: "nginx-internal"
+        className: "traefik"
         annotations:
           authentik.sparks.codes/enabled: "true"
           hajimari.io/enable: "true"
