--- a/cluster/apps/tools/netboot.xyz/helm-release.yaml
+++ b/cluster/apps/tools/netboot.xyz/helm-release.yaml
@@ -57,7 +57,7 @@ spec:
     ingress:
       main:
         enabled: true
-        className: "nginx-internal"
+        className: "traefik"
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/appName: "Netboot.xyz"
